@@ -5,7 +5,6 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
-#include <unistd.h>
 #include <mspack.h>
 #include <sys/stat.h>
 #include <dirent.h>
